# neskimo

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  NES_NOTES.md  NOTES.md  OPCODES.md  README.md  ROADMAP.md  notes.md
src/: clock.rs  cpu.rs  gfx.rs  instruction.rs  instruction_definition.rs  instructions.rs  lib.rs  main.rs  memory.rs  opcode.rs  rom.rs  test.rs
src/cpu/: cpu.rs  cpu_test.rs  definition.rs  instruction.rs  mod.rs  opcode.rs
src/instruction/: definition.rs  instruction.rs  mod.rs
src/nes/: cpu.rs  definition.rs  instruction.rs  memory.rs  memory_test.rs  mod.rs  nes.rs  opcode.rs  ppu.rs  test.rs  test_cpu.rs  test_memory.rs
src/ppu/: internal_memory.rs  mod.rs  ppu.rs  vram.rs
src/utils/: arithmetic.rs  io.rs  mod.rs  paging.rs
test_roms/: test_header.nes
tests/: cpu.rs  memory.rs
